--- a/podfile
+++ b/podfile
@@ -2,7 +2,5 @@ platform :ios, '8.0'
 use_frameworks!
 
 target 'podTest' do
-  pod 'AFNetworking', '~> 2.6'
-  pod 'ORStackView', '~> 3.0'
-  pod 'SwiftyJSON', '~> 2.3'
+  pod 'MaterialComponents'
 end
